# otus.lessons.28.02

./: .travis.yml  README.md
docker/: Dockerfile  docker.sh  test.in.txt
src/: CMakeLists.txt  main.cpp  mapreduce.h
